started 2 mass wit jQ

--- a/public/style.css
+++ b/public/style.css
@@ -12,3 +12,21 @@
 .ool {
 	text-align: left;
 }
+
+.tema {
+	text-align: left;
+}
+
+#butt_01 {
+	display: none;
+}
+/* #butt_02 {
+	display: none;
+} */
+#butt_03 {
+	display: none;
+}
+#butt_04 {
+	display: none;
+}
+
